# Janice

./: .gitignore  CONTRIBUTING.md  DATA_TRANSPARENCY.md  GEMINI.md  GLOSSARY.md  INSTALL.md  Janice.sln  LEARNING_ENHANCEMENTS.md  POLICY.md  README.md  SECURITY.md  USER_GUIDE.md  constitution.yaml  fast_stable_diffusion_AUTOMATIC1111.ipynb  pyproject.toml
src/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  src.sln
src/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/Janice.CLI/: App.cs  Janice.CLI.csproj  Program.cs
src/Janice.Core/: DEVELOPER.md  Janice.Core.csproj  Janice.Core.sln  ServiceCollectionExtensions.cs
src/Janice.Core/Enums/: ResponseType.cs  Roles.cs
src/Janice.Core/Models/: ChatInteraction.cs  ChatMessage.cs  ChatRequest.cs  ChatResponse.cs  CodeDataModels.cs  Conversation.cs  Intention.cs  JanetCOnfig.cs  OllamaApiModels.cs  OllamaChatRequest.cs  OllamaChatResponse.cs  OllamaModel.cs  OllamaPullRequest.cs  OllamaTagsResponse.cs  User.cs
src/Janice.Core/Services/: ConfigService.cs  IntentService.cs  LoggingService.cs  LoginService.cs  OllamaApiService.cs  UserService.cs
src/Janice.Gui/: App.axaml  App.axaml.cs  Janice.Gui.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
src/janice/: __init__.py  cli.py  config.py  executor.py  governor.py  proposer.py
src/janice/audit/: audit.py
src/janice/crypto/: capabilities.py  signing.py
src/janice/policy/: constitution_loader.py
tests/: test_canonical_json.py  test_executor_path_safety.py  test_proposal_schema.py  test_signing_and_verification.py
(+15 files in other folders)
